--- a/MobeenApplication/Base.lproj/Main.storyboard
+++ b/MobeenApplication/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xrp-cZ-Kcw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YSa-YG-dd6">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -143,7 +143,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NkM-nQ-T6F">
-                                                                    <rect key="frame" x="285" y="8" width="42.333333333333314" height="35"/>
+                                                                    <rect key="frame" x="286.33333333333331" y="8" width="41" height="35"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="35" id="h9E-qZ-dAO"/>
                                                                     </constraints>
@@ -319,7 +319,7 @@
                                                             </buttonConfiguration>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Xk-Cd-8eY">
-                                                            <rect key="frame" x="287.66666666666669" y="6" width="42.333333333333314" height="35"/>
+                                                            <rect key="frame" x="289" y="6" width="41" height="35"/>
                                                             <color key="tintColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="bookmark" catalog="system" title="">
@@ -596,7 +596,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="wmR-K8-iTL">
-                                <rect key="frame" x="0.0" y="233.33333333333331" width="390" height="576.66666666666674"/>
+                                <rect key="frame" x="0.0" y="190.33333333333331" width="390" height="619.66666666666674"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.98823529409999999" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="comp" rowHeight="190" id="ZBx-0B-WuE" customClass="ComTableViewCell" customModule="MobeenApplication" customModuleProvider="target">
@@ -682,11 +682,11 @@
                                 <rect key="frame" x="36" y="70" width="318" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="53" translatesAutoresizingMaskIntoConstraints="NO" id="gKo-l9-pEk">
-                                <rect key="frame" x="46" y="127" width="300" height="94.666666666666686"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="53" translatesAutoresizingMaskIntoConstraints="NO" id="uUk-Nd-O4B">
+                                <rect key="frame" x="30" y="134" width="323.66666666666669" height="51.666666666666657"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8LR-eQ-r7Y">
-                                        <rect key="frame" x="0.0" y="0.0" width="123.66666666666667" height="94.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="135.33333333333334" height="51.666666666666664"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title=" Requests">
                                             <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
@@ -697,7 +697,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IBL-Om-jaE">
-                                        <rect key="frame" x="176.66666666666666" y="0.0" width="123.33333333333334" height="94.666666666666671"/>
+                                        <rect key="frame" x="188.33333333333331" y="0.0" width="135.33333333333331" height="51.666666666666664"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title=" Completed" buttonSize="large">
                                             <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="18"/>
@@ -710,16 +710,16 @@
                         <viewLayoutGuide key="safeArea" id="ae3-KU-ctk"/>
                         <color key="backgroundColor" red="0.98823529409999999" green="0.98823529409999999" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="uUk-Nd-O4B" firstAttribute="top" secondItem="miz-eT-lKt" secondAttribute="bottom" constant="13" id="2hA-NM-IJn"/>
                             <constraint firstItem="wmR-K8-iTL" firstAttribute="trailing" secondItem="ae3-KU-ctk" secondAttribute="trailing" id="5bK-QH-0hA"/>
+                            <constraint firstItem="ae3-KU-ctk" firstAttribute="trailing" secondItem="uUk-Nd-O4B" secondAttribute="trailing" constant="36.329999999999998" id="Ay3-Bs-R2S"/>
                             <constraint firstItem="ae3-KU-ctk" firstAttribute="trailing" secondItem="miz-eT-lKt" secondAttribute="trailing" constant="36" id="Kb5-kz-Wsc"/>
+                            <constraint firstItem="uUk-Nd-O4B" firstAttribute="leading" secondItem="ae3-KU-ctk" secondAttribute="leading" constant="30" id="P0s-Az-f40"/>
                             <constraint firstItem="miz-eT-lKt" firstAttribute="top" secondItem="ae3-KU-ctk" secondAttribute="top" constant="26" id="QAH-fm-nCB"/>
                             <constraint firstItem="wmR-K8-iTL" firstAttribute="bottom" secondItem="ae3-KU-ctk" secondAttribute="bottom" id="Ubv-Ak-MIn"/>
-                            <constraint firstItem="gKo-l9-pEk" firstAttribute="top" secondItem="miz-eT-lKt" secondAttribute="bottom" constant="6" id="Vcq-pb-hld"/>
-                            <constraint firstItem="wmR-K8-iTL" firstAttribute="top" secondItem="gKo-l9-pEk" secondAttribute="bottom" constant="11.5" id="W7y-OH-XZ4"/>
                             <constraint firstItem="wmR-K8-iTL" firstAttribute="leading" secondItem="ae3-KU-ctk" secondAttribute="leading" id="WRs-gd-yP3"/>
                             <constraint firstItem="miz-eT-lKt" firstAttribute="leading" secondItem="ae3-KU-ctk" secondAttribute="leading" constant="36" id="Yij-yI-sF9"/>
-                            <constraint firstItem="ae3-KU-ctk" firstAttribute="trailing" secondItem="gKo-l9-pEk" secondAttribute="trailing" constant="44" id="lXc-yG-5Z6"/>
-                            <constraint firstItem="gKo-l9-pEk" firstAttribute="leading" secondItem="ae3-KU-ctk" secondAttribute="leading" constant="46" id="vKX-hO-aH7"/>
+                            <constraint firstItem="wmR-K8-iTL" firstAttribute="top" secondItem="uUk-Nd-O4B" secondAttribute="bottom" constant="4.6699999999999999" id="aHi-EJ-j5u"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Requests" id="sOh-f2-pUf"/>
@@ -732,7 +732,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xck-Dy-ngH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2510" y="698"/>
+            <point key="canvasLocation" x="2509.2307692307691" y="697.39336492890993"/>
         </scene>
         <!--oooooo-->
         <scene sceneID="0Af-q6-OvF">
@@ -1066,10 +1066,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Vvv-PX-iZF">
-                                                    <rect key="frame" x="20" y="28.999999999999993" width="265" height="85.333333333333329"/>
+                                                    <rect key="frame" x="20" y="28.999999999999993" width="264.33333333333331" height="85.333333333333329"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JtT-mQ-qcQ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="141" height="30.666666666666668"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="140.33333333333334" height="30.666666666666668"/>
                                                             <color key="tintColor" systemColor="labelColor"/>
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="circle" catalog="system" title="Text Translation">
@@ -1080,7 +1080,7 @@
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3nE-EV-2yD">
-                                                            <rect key="frame" x="0.0" y="40.666666666666671" width="265" height="44.666666666666671"/>
+                                                            <rect key="frame" x="0.0" y="40.666666666666671" width="264.33333333333331" height="44.666666666666671"/>
                                                             <color key="tintColor" systemColor="labelColor"/>
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="circle" catalog="system" title="Text Conversion">
